# crosstache

./: .gitignore  AGENTS.md  AI-SPECIFIC.md  AZ.md  CHANGELOG.md  CLAUDE.md  CLEANUP_CHECKLIST.md  COMPLETION_STATUS.md  CONTEXT.md  Cargo.toml  DELETE.md  DIRLIST.md  DIRS.md  FILE-OPS.md  FILE.md  FILES.md  GROUPS.md  IMPLEMENTATION_SUMMARY.md  IMPROVE.md  INIT.md  INPUT.md  README.md  REFACTOR.md  ROADMAP.md  SECURITY_AUDIT.md  SECURITY_REVIEW.md  SMART_INFO.md  SYNC.md  TEST_RESULTS.md  TODO.md  UNDONE.md  UPGRADES.md  UPLOAD.md  ZEROIZE_PLAN.md  build.rs  install-codex-devtools.sh  output.txt  package-lock.json  package.json  playwright.config.js  (+3 more)
.beads/: metadata.json
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  release.yml
.kiro/steering/: architecture.md  azure-integration.md  cli-patterns.md  coding-standards.md  product.md
.superpowers/sdd/: context-task-5-report.md  context-task-6-report.md  context-task-7-report.md  search-task-1-report.md  search-task-2-report.md  search-task-3-report.md  search-task-5-report.md  search-task-6-report.md
desktop/: HANDOFF.md  README.md
desktop/frontend/: index.html  loading.css  loading.js  loading.test.js
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/autogenerated/: apply_setup.toml  copy_diagnostics.toml  open_config.toml  preview_setup.toml  retry_startup.toml  startup_status.toml
desktop/src-tauri/src/: main.rs  startup.rs
dev/: CODE_REVIEW.md  FILE-BLOB-REFACTOR-PLAN.md  IMPROVE.md  MISSING-FEATURES.md  PASS1.md  REFACTOR.md  ROADMAP.md  SECURITY_AUDIT.md
docs/: APP-UX-IMPLEMENTATION-EVIDENCE.md  APP-UX-IMPROVEMENTS.md  CLAUDE.md  CODEX.md  CONTEXT.md  FEATURES.md  GROUPS.md  INPUT.md  UPGRADES.md  UX-REVIEW.md  code-review-gpt55.md  env-profiles.md  exit-codes.md  find.md  improvement-6-implementation-plan.md  migration.md  scan.md  security-review-2026-05-28.md  testing.md  tui.md  web-ui.md
docs/plans/: 2026-03-05-readme-audit-design.md  2026-03-05-readme-audit-plan.md  2026-03-06-output-consistency-design.md  2026-03-06-output-consistency-plan.md  2026-03-06-ux-audit-findings.md  2026-03-09-e2e-test-fixes.md  2026-04-28-list-pagination-plan.md  2026-05-27-p2p-secret-sharing.md  2026-06-19-local-secret-filename-opaquing.md
docs/reviews/: 2026-05-03-ux-review.md
scripts/: install.ps1  install.sh
src/: error.rs  lib.rs  main.rs
src/auth/: azure.rs  graph.rs  mod.rs  provider.rs
src/backend/: addressing.rs  audit.rs  error.rs  file.rs  mod.rs  registry.rs  secret.rs  vault.rs
src/blob/: manager.rs  mod.rs  models.rs  operations.rs  storage.rs  sync.rs
src/cache/: manager.rs  mod.rs  models.rs  refresh.rs
src/cli/: attach_ops.rs  commands.rs  config_ops.rs  file.rs  file_ops.rs  file_ops_aws.rs  helpers.rs  local_ops.rs  ls_view.rs  migrate_ops.rs  mod.rs  mv_ops.rs  scan_ops.rs  secret_ops.rs  system_ops.rs  type_ops.rs  upgrade_ops.rs  vault_ops.rs
src/config/: context.rs  init.rs  mod.rs  project.rs  settings.rs  setup.rs
src/records/: conversion.rs  envelope.rs  mod.rs  types.rs
src/scan/: engine.rs  finding.rs  installer.rs  mod.rs  orchestrator.rs  patterns.rs  staged.rs  walker.rs
src/secret/: attachments.rs  manager.rs  mod.rs  models.rs  name_manager.rs
src/tui/: app.rs  clipboard.rs  data.rs  event.rs  message.rs  mod.rs  overlays.rs  update.rs  view.rs
src/utils/: azure_detect.rs  datetime.rs  error_hints.rs  format.rs  fuzzy.rs  helpers.rs  interactive.rs  list_output.rs  mod.rs  network.rs  output.rs  pager.rs  pagination.rs  progress.rs  resource_detector.rs  retry.rs  sanitizer.rs  suggestions.rs  url_helpers.rs
src/vault/: manager.rs  mod.rs  models.rs  operations.rs
src/web/: api.rs  auth.rs  context.rs  errors.rs  files.rs  folder_tokens.rs  mod.rs  preferences.rs  secrets.rs  testutil.rs
src/workspace/: address.rs  mod.rs  resolve.rs
tests/: auth_tests.rs  aws_backend_tests.rs  aws_localstack_tests.rs  azure_recursive_upload_tests.rs  cache_tests.rs  cli_integration_tests.rs  clipboard_tests.rs  completion_tests.rs  config_command_tests.rs  context_tests.rs  e2e_a4_vault_override.rs  e2e_aws_backend.rs  e2e_azure_backend.rs  e2e_backend_resolution.rs  e2e_degenerate_workspace.rs  e2e_env_profile_defaults.rs  e2e_filter_glob.rs  e2e_integration_tests.rs  e2e_local_backend.rs  e2e_local_file_ops.rs  e2e_mv_filter.rs  e2e_record_types.rs  e2e_share_capability_gate.rs  e2e_vault_alias_ux.rs  e2e_vault_lifecycle.rs  e2e_workspaces.rs  error_codes_tests.rs  file_commands_tests.rs  find_pagination_tests.rs  gen_tests.rs  local_backend_integration.rs  migration_round_trip_tests.rs  scan_tests.rs  tui_view_tests.rs  vault_tests.rs  version_history_tests.rs
tests/common/: mod.rs
tests/desktop/: package-smoke.sh  playwright.config.js  startup-browser.spec.js  startup-smoke.js
tests/web/: fixture-support.js  fixtures.js  ui-accessibility.spec.js  ui-commands.spec.js  ui-context.spec.js  ui-errors.spec.js  ui-folders.spec.js  ui-navigation.spec.js  ui-protected-values.spec.js  ui-responsive.spec.js  ui-settings-help.spec.js  ui-trash.spec.js  ui-typed-editor.spec.js  ui-uploads.spec.js  ui-visual.spec.js
xfunction/: .funcignore  .gitignore  CLAUDE.md  STORAGE_IMPLEMENTATION_CHECKLIST.md  config.py  function_app.py  host.json  local.settings.json.example  requirements.txt
xfunction/StorageRoleManager/: __init__.py  storage_role_manager.py
xfunction/VaultRbacProcessor/: README.md  vault_role_manager.py
xfunction/dev/: CODE_REVIEW.md
xfunction/installer/: __init__.py  __main__.py  az.py  cli.py  config.py
xfunction/scripts/: README-POWERSHELL.md  configure-graph-permissions.ps1  deploy-function.ps1  fix-event-grid-endpoint.ps1  get-function-logs.ps1  setup-app-registration.ps1  setup-managed-identity.ps1  test-function.ps1  test_event.py  test_local.py  update-event-grid-filter.ps1  verify-deployment.ps1
xfunction/tests/: run_tests.py  test_az_cli.py  test_azure_helpers.py  test_direct_rbac_processor.py  (+7 more)
(+154 files in other folders)
