[package]
name = "crosstache"
version = "0.4.0"
edition = "2021"
authors = ["crosstache Team"]
description = "A comprehensive command-line tool for managing Azure Key Vaults"
license = "MIT"
repository = "https://github.com/crosstache/crosstache-rust"
keywords = ["azure", "keyvault", "cli", "secrets", "vault"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "xv"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Azure SDK - Stable v0.21 (updated from v0.20)
azure_identity = "0.21"
azure_core = "0.21"
azure_security_keyvault = "0.21"
azure_storage_blobs = "0.21"
azure_mgmt_storage = "0.21"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
regex = "1.0"
dirs = "5.0"
config = "0.14"

# UI components
tabled = "0.15"
rpassword = "7.0"
crossterm = "0.27"
clipboard = "0.5"
dialoguer = "0.11"
indicatif = "0.17"

# Security
zeroize = { version = "1.0", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }

# Additional utilities
url = "2.0"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
async-trait = "0.1"
tempfile = "3.0"
mime_guess = "2.0"
libc = "0.2.182"

[features]
default = ["file-ops"]
file-ops = []

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"
tokio-test = "0.4"
time = { version = "0.3", features = ["macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

# cargo-release configuration for GitHub-only releases
[package.metadata.release]
publish = false           # Don't publish to crates.io
push = true              # Push tags and commits to GitHub
tag = true               # Create git tags
sign-commit = false      # Don't sign commits (optional)
sign-tag = false         # Don't sign tags (optional)
