[package]
name = "crosstache"
version = "0.14.0"
edition = "2021"
authors = ["crosstache Team"]
description = "A comprehensive command-line tool for managing Azure Key Vaults"
license = "MIT"
repository = "https://github.com/crosstache/crosstache-rust"
keywords = ["azure", "keyvault", "cli", "secrets", "vault"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "xv"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Azure SDK - Stable v0.21 (updated from v0.20)
azure_identity = "0.21"
azure_core = "0.21"
azure_security_keyvault = "0.21"
azure_storage_blobs = "0.21"
azure_mgmt_storage = "0.21"

# AWS SDK - feature-gated under `aws`
aws-sdk-secretsmanager = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio", "behavior-version-latest"] }
aws-sdk-cloudtrail = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio", "behavior-version-latest"] }
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
aws-smithy-runtime-api = { version = "1", optional = true }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
percent-encoding = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.10"
regex = "1.0"
aho-corasick = "1.1"
globset = "0.4"
ignore = "0.4"
dirs = "5.0"
nucleo = "0.5"
config = "0.14"

# UI components
tabled = "0.15"
rpassword = "7.5"
crossterm = "0.27"
arboard = "3"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
ratatui = "0.30"

# Security
zeroize = { version = "1.0", features = ["serde"] }
age = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }

# Additional utilities
url = "2.0"
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
hkdf = "0.12"
data-encoding = "2"
minisign-verify = "0.2"
toml = "0.8"
async-trait = "0.1"
tempfile = "3.0"
fs2 = "0.4"
mime_guess = "2.0"
libc = "0.2.182"
semver = "1"
strsim = "0.11"
flate2 = "1"
tar = "0.4"
opener = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "2"

[features]
default = ["file-ops"]
file-ops = []
tui = []
aws = ["dep:aws-sdk-secretsmanager", "dep:aws-sdk-cloudtrail", "dep:aws-config", "dep:aws-smithy-runtime-api", "dep:aws-sdk-s3"]

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"
tokio-test = "0.4"
time = { version = "0.3", features = ["macros"] }
aws-smithy-mocks-experimental = "0.2"
aws-sdk-secretsmanager = { version = "1", features = ["test-util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

# cargo-release configuration for GitHub-only releases
[package.metadata.release]
publish = false           # Don't publish to crates.io
push = true              # Push tags and commits to GitHub
tag = true               # Create git tags
sign-commit = false      # Don't sign commits (optional)
sign-tag = false         # Don't sign tags (optional)
