[package]
name = "xv-desktop"
version = "0.26.2"
description = "macOS desktop proof of concept for Crosstache Vault"
authors = ["crosstache Team"]
edition = "2021"
license = "MIT"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
crosstache = { path = "../..", features = ["ui", "aws"] }
opener = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
